kubernetes-labs/lab-26-istio-mtls-strict/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-26-mtls
  labels:
    istio-injection: enabled
